[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/ghostclan.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://interfaz.gd" type="Script" id=4]
[ext_resource path="res://fonts/ka1.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_size = 2
outline_color = Color( 0.372549, 0.0392157, 0.0392157, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_char = 3
extra_spacing_space = -5
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 55
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 38
outline_size = 1
outline_color = Color( 0, 0.447059, 0.537255, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_char = 3
extra_spacing_space = 9
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 30
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_char = 2
font_data = ExtResource( 5 )

[node name="interfaz" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="score" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.759
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -425.0
margin_top = 39.6
margin_right = 423.0
margin_bottom = -33.0
custom_fonts/font = SubResource( 1 )
text = "SCORE : "
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mensaje" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -449.0
margin_top = 97.0
margin_right = 450.0
margin_bottom = 267.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "BIENVENIDO A MAT-FRUIT"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="botonJugar" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -105.0
margin_top = -267.0
margin_right = 105.0
margin_bottom = -182.0
custom_fonts/font = SubResource( 3 )
text = "JUGAR!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mensajeTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="finalScore" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -448.5
margin_top = -356.0
margin_right = 444.5
margin_bottom = -280.0
custom_fonts/font = SubResource( 4 )
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="botonJugar" to="." method="_on_botonJugar_pressed"]
[connection signal="timeout" from="mensajeTimer" to="." method="_on_mensajeTimer_timeout"]
